--- a/css/main.css
+++ b/css/main.css
@@ -73,27 +73,6 @@ section {
   padding-right: 15px;
 }
 
-.backdrop {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  opacity: 1;
-  background-color: rgba(0, 0, 0, 0.2);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.backdrop is-hidden {
-  opacity: 0;
-  pointer-events: none;
-  visibility: hidden;
-}
-
-.backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0.5);
-}
-
 .logo {
   font-family: var(--secondary-font);
   font-style: normal;
@@ -102,9 +81,6 @@ section {
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-}
-
-.navigation .logo {
   margin-right: 93px;
 }
 
@@ -112,7 +88,7 @@ section {
   color: var(--accent-color);
 }
 
-.logo-futer {
+.futer-logo {
   display: block;
   font-family: var(--secondary-font);
   color: var(--primary-white-color);
@@ -136,6 +112,62 @@ section {
   background-color: var(--accent-color);
   cursor: pointer;
   padding: 10px 32px;
+}
+
+.backdrop {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 1;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.5);
+}
+
+.modal {
+  position: absolute;
+  width: 528px;
+  height: 581px;
+  top: 50%;
+  left: 50%;
+  padding: 8px;
+  border-radius: 4px;
+  background-color: var(--primary-white-color);
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-button {
+  display: block;
+  width: 30px;
+  height: 30px;
+  margin-left: auto;
+  align-items: center;
+  text-align: center;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: var(--primary-white-color);
+  cursor: pointer;
+}
+
+.close-button:hover, .close-button:focus {
+  color: var(--accent-color);
+}
+
+.close-svg {
+  fill: currentColor;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-form {
@@ -285,41 +317,6 @@ section {
   margin-top: 30px;
 }
 
-.modal {
-  position: absolute;
-  width: 528px;
-  height: 581px;
-  top: 50%;
-  left: 50%;
-  padding: 8px;
-  border-radius: 4px;
-  background-color: var(--primary-white-color);
-  transform: translate(-50%, -50%) scale(1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.close-button {
-  display: block;
-  width: 30px;
-  height: 30px;
-  margin-left: auto;
-  align-items: center;
-  text-align: center;
-  border-radius: 50%;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  background-color: var(--primary-white-color);
-  cursor: pointer;
-}
-
-.close-button:hover, .close-button:focus {
-  color: var(--accent-color);
-}
-
-.close-svg {
-  fill: currentColor;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .social {
   display: flex;
   align-items: center;
@@ -357,6 +354,10 @@ section {
 
 .last {
   margin-right: 0px;
+}
+
+.network {
+  margin-left: 0;
 }
 
 .network-link {
