--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -7,7 +7,7 @@
   opacity: 1;
   background-color: rgba(0, 0, 0, 0.2);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  & is-hidden {
+  &.is-hidden {
     opacity: 0;
     pointer-events: none;
     visibility: hidden;
