--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -6,17 +6,17 @@
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+  margin-right: 93px;
 
-  .navigation & {
-    margin-right: 93px;
-  }
+  // .navigation & {
+  // }
 
   &--span {
     color: var(--accent-color);
   }
 }
 
-.logo-futer {
+.futer-logo {
   display: block;
   font-family: var(--secondary-font);
   color: var(--primary-white-color);
