--- a/css/main.css
+++ b/css/main.css
@@ -90,12 +90,7 @@ section {
 
 .futer-logo {
   display: block;
-  font-family: var(--secondary-font);
   color: var(--primary-white-color);
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
   text-decoration: none;
   margin-bottom: 20px;
 }
@@ -131,10 +126,6 @@ section {
   visibility: hidden;
 }
 
-.backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0.5);
-}
-
 .modal {
   position: absolute;
   width: 528px;
@@ -146,6 +137,10 @@ section {
   background-color: var(--primary-white-color);
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.5);
 }
 
 .close-button {
@@ -326,7 +321,7 @@ section {
   margin-right: 32px;
 }
 
-.social-link {
+.social__link {
   display: flex;
   width: 44px;
   height: 44px;
@@ -338,17 +333,17 @@ section {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-link:hover, .social-link:focus {
+.social__link:hover, .social__link:focus {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
 }
 
-.social-svg {
+.social__svg {
   fill: currentColor;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-svg:hover, .social-svg:focus {
+.social__svg:hover, .social__svg:focus {
   fill: #ffffff;
 }
 
@@ -360,14 +355,13 @@ section {
   margin-left: 0;
 }
 
-.network-link {
+.network__link {
   color: var(--primary-white-color);
   background-color: rgba(255, 255, 255, 0.1);
-  margin-right: 10px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.network-link:hover, .network-link:focus {
+.network__link:hover, .network__link:focus {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
 }
