--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -9,6 +9,9 @@
   background-color: var(--primary-white-color);
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  .backdrop.is-hidden & {
+    transform: translate(-50%, -50%) scale(0.5);
+  }
 }
 
 .close-button {
