--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -6,7 +6,7 @@
   margin-left: 32px;
   margin-right: 32px;
 
-  &-link {
+  &__link {
     display: flex;
     width: 44px;
     height: 44px;
@@ -17,17 +17,17 @@
     margin-right: 10px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  &-link:hover,
-  &-link:focus {
+  &__link:hover,
+  &__link:focus {
     color: var(--primary-white-color);
     background-color: var(--accent-color);
   }
-  &-svg {
+  &__svg {
     fill: currentColor;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  &-svg:hover,
-  &-svg:focus {
+  &__svg:hover,
+  &__svg:focus {
     fill: #ffffff;
   }
 }
@@ -35,28 +35,21 @@
 .last {
   margin-right: 0px;
 }
+
 .network {
   margin-left: 0;
-}
-
-// .social-network {
-//   display: flex;
-//   align-items: center;
-//   justify-content: space-between;
-// }
-.network-link {
-  color: var(--primary-white-color);
-  background-color: rgba(255, 255, 255, 0.1);
-  margin-right: 10px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover,
-  &:focus {
+  &__link {
     color: var(--primary-white-color);
-    background-color: var(--accent-color);
+    background-color: rgba(255, 255, 255, 0.1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+      color: var(--primary-white-color);
+      background-color: var(--accent-color);
+    }
   }
-}
-
-.network-svg {
-  fill: var(--primary-white-color);
+  &-svg {
+    fill: var(--primary-white-color);
+  }
 }
