--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -32,6 +32,10 @@
     letter-spacing: 0.03em;
     margin-bottom: 10px;
   }
+  &-div {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
 }
 
 .profession {
@@ -39,8 +43,4 @@
   line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
-}
-.team-div {
-  padding-top: 30px;
-  padding-bottom: 30px;
 }
