--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@
 @import "./components/modal-window";
 @import "./components/modal-form";
 @import "./components/social";
+@import "./components/subscription-form";
 
 // LAYOUT
 @import "./layout/header";
