--- a/css/main.css
+++ b/css/main.css
@@ -767,7 +767,7 @@ section {
   padding-bottom: 60px;
 }
 
-.footer__list-link {
+.footer__address-list-link {
   display: block;
   color: var(--primary-white-color);
   font-style: normal;
@@ -778,7 +778,7 @@ section {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer__list-link:hover, .footer__list-link:focus {
+.footer__address-list-link:hover, .footer__address-list-link:focus {
   color: var(--accent-color);
 }
 
