--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,7 +3,7 @@
   padding-top: 60px;
   padding-bottom: 60px;
 
-  &__list-link {
+  &__address-list-link {
     display: block;
     color: var(--primary-white-color);
     font-style: normal;
@@ -18,7 +18,7 @@
     }
   }
 
-  &__list-link {
+  &__contacts-list-link {
     color: rgba(255, 255, 255, 0.6);
     font-weight: 400;
     font-style: normal;
