--- a/css/main.css
+++ b/css/main.css
@@ -782,7 +782,7 @@ section {
   color: var(--accent-color);
 }
 
-.footer__list-link {
+.footer__contacts-list-link {
   color: rgba(255, 255, 255, 0.6);
   font-weight: 400;
   font-style: normal;
@@ -792,7 +792,7 @@ section {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer__list-link:hover, .footer__list-link:focus {
+.footer__contacts-list-link:hover, .footer__contacts-list-link:focus {
   color: var(--accent-color);
 }
 
