--- a/css/main.css
+++ b/css/main.css
@@ -366,7 +366,7 @@ section {
   background-color: var(--accent-color);
 }
 
-.network-svg {
+.network__svg {
   fill: var(--primary-white-color);
 }
 
@@ -834,7 +834,7 @@ section {
   margin-right: 8px;
 }
 
-.button-nav .nav-button {
+.nav-button {
   color: var(--title-text-color);
   background: #f5f4fa;
   font-weight: 500;
@@ -849,8 +849,7 @@ section {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-button:hover,
-.nav-button:focus {
+.nav-button:hover, .nav-button:focus {
   color: var(--primary-white-color);
   background: var(--accent-color);
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 3px 1px rgba(61, 38, 38, 0.1);
