--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -7,7 +7,8 @@
     margin-right: 8px;
   }
 }
-.button-nav .nav-button {
+
+.nav-button {
   color: var(--title-text-color);
   background: #f5f4fa;
   font-weight: 500;
@@ -22,15 +23,15 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: var(--primary-white-color);
+    background: var(--accent-color);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 3px 1px rgba(61, 38, 38, 0.1);
+  }
 }
 
-.nav-button:hover,
-.nav-button:focus {
-  color: var(--primary-white-color);
-  background: var(--accent-color);
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 3px 1px rgba(61, 38, 38, 0.1);
-}
 .work-list {
   display: flex;
   flex-wrap: wrap;
@@ -71,7 +72,9 @@
   padding-bottom: 20px;
   padding-left: 24px;
 }
+
 /* --- Синий оверлей с текстом---- */
+
 .work-thumd {
   position: relative;
   height: 294px;
@@ -104,6 +107,7 @@
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .work-list-link:hover .work-description {
   transform: translateY(0);
   opacity: 1;
