--- a/css/main.css
+++ b/css/main.css
@@ -435,6 +435,7 @@ section {
   letter-spacing: 0.06em;
   color: var(--primary-white-color);
   text-align: center;
+  cursor: pointer;
 }
 
 .subscription-blok__icon {
