--- a/sass/components/_subscription-form.scss
+++ b/sass/components/_subscription-form.scss
@@ -61,6 +61,7 @@
     letter-spacing: 0.06em;
     color: var(--primary-white-color);
     text-align: center;
+    cursor: pointer;
   }
   &__icon {
     display: flex;
